--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ run-tests:
     - pip install numpy
     - pip install six
     - pip install -r requirements.txt
-    - git clone https://github.com/roocs/mini-esgf-data.git
+    - git submodule init
+    - git submodule update
     - mkdir -p /badc/
     - mv mini-esgf-data/test_data/badc/cmip5/ /badc/
   script:
