--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mini-esgf-data"]
 	path = mini-esgf-data
-	url = git@github.com:roocs/mini-esgf-data.git
+	url = https://github.com/roocs/mini-esgf-data
