--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,6 @@ run-tests:
     - mkdir -p /badc/
     - mv mini-esgf-data/test_data/badc/cmip5/ /badc/
   script:
-    - python -m pytest test
+    - python -m pytest tests
   only:
     - pushes
