--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ run-tests:
     - pip install -r requirements.txt
     - pip install -r requirements_dev.txt
     - git submodule update --init --recursive
+    - chomd +wrx outputs
   script:
     - python -m pytest tests
   only:
