removed submodule update from ci yml files

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ jobs:
     - stage: test
       before_script:
         - pip install -r requirements_dev.txt
-        - git submodule update --init --recursive
+#        - git submodule update --init --recursive
         - chmod +wrx $TRAVIS_BUILD_DIR/outputs
       script: python -m pytest tests
