--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ run-tests:
     - pip install six
     - pip install -r requirements.txt
     - pip install -r requirements_dev.txt
-    - git submodule update --init --recursive
+#    - git submodule update --init --recursive
     - chmod +wrx $CI_PROJECT_DIR/outputs
   script:
     - python -m pytest tests
